--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.3",
     "@astrojs/check": "^0.6.0",
+    "astro": "^4.8.3",
+    "microcms-js-sdk": "^3.1.1",
     "typescript": "^5.4.5"
   }
 }
